package no.ntnu.idi.apollo69;

public class Device {
    public static String DEVICE_ID = "";
    public static String NAME = "";
}
