package no.ntnu.idi.apollo69.model;

public class LobbyModel {
}
