package no.ntnu.idi.apollo69.model.component;

import com.badlogic.ashley.core.Component;

public class BoosterComponent implements Component {
    public float speed = 0.0f;
}
