package no.ntnu.idi.apollo69.model.component;

import com.badlogic.ashley.core.Component;

public class RotationComponent implements Component {
    public float degrees = 0.0f;
}
