package no.ntnu.idi.apollo69.model.component;

import com.badlogic.ashley.core.Component;

public class VelocityComponent implements Component {
    public float x = 0.0f;
    public float y = 0.0f;
    public float boost = 0.0f;
}
