package no.ntnu.idi.apollo69.screens;

public enum ScreenType {
    MAIN_MENU,
    SETTINGS,
    GAME,
}
