package no.ntnu.idi.apollo69.screens.main_menu;

public class MainMenuController {
}
