@startuml

title __CORE's Class Diagram__\n

  namespace no.ntnu.idi.apollo69 {
    class no.ntnu.idi.apollo69.Apollo69 {
    }
  }
  

  namespace no.ntnu.idi.apollo69 {
    class no.ntnu.idi.apollo69.Device {
    }
  }
  

  namespace no.ntnu.idi.apollo69 {
    interface no.ntnu.idi.apollo69.Variables {
    }
  }
  

  namespace no.ntnu.idi.apollo69 {
    namespace controller {
      class no.ntnu.idi.apollo69.controller.GameController {
      }
    }
  }
  

  namespace no.ntnu.idi.apollo69 {
    namespace controller {
      class no.ntnu.idi.apollo69.controller.LobbyController {
      }
    }
  }
  

  namespace no.ntnu.idi.apollo69 {
    namespace controller {
      class no.ntnu.idi.apollo69.controller.MainMenuController {
      }
    }
  }
  

  namespace no.ntnu.idi.apollo69 {
    namespace controller {
      class no.ntnu.idi.apollo69.controller.MatchmakingController {
      }
    }
  }
  

  namespace no.ntnu.idi.apollo69 {
    namespace game_engine {
      class no.ntnu.idi.apollo69.game_engine.Assets {
      }
    }
  }
  

  namespace no.ntnu.idi.apollo69 {
    namespace game_engine {
      class no.ntnu.idi.apollo69.game_engine.Background {
      }
    }
  }
  

  namespace no.ntnu.idi.apollo69 {
    namespace game_engine {
      class no.ntnu.idi.apollo69.game_engine.GameEngine {
      }
    }
  }
  

  namespace no.ntnu.idi.apollo69 {
    namespace game_engine {
      class no.ntnu.idi.apollo69.game_engine.GameEngineFactory {
      }
    }
  }
  

  namespace no.ntnu.idi.apollo69 {
    namespace game_engine {
      namespace components {
        class no.ntnu.idi.apollo69.game_engine.components.BoosterComponent {
        }
      }
    }
  }
  

  namespace no.ntnu.idi.apollo69 {
    namespace game_engine {
      namespace components {
        class no.ntnu.idi.apollo69.game_engine.components.BoundingCircleComponent {
        }
      }
    }
  }
  

  namespace no.ntnu.idi.apollo69 {
    namespace game_engine {
      namespace components {
        class no.ntnu.idi.apollo69.game_engine.components.PlayableComponent {
        }
      }
    }
  }
  

  namespace no.ntnu.idi.apollo69 {
    namespace game_engine {
      namespace components {
        class no.ntnu.idi.apollo69.game_engine.components.PositionComponent {
        }
      }
    }
  }
  

  namespace no.ntnu.idi.apollo69 {
    namespace game_engine {
      namespace components {
        class no.ntnu.idi.apollo69.game_engine.components.RotationComponent {
        }
      }
    }
  }
  

  namespace no.ntnu.idi.apollo69 {
    namespace game_engine {
      namespace components {
        class no.ntnu.idi.apollo69.game_engine.components.VelocityComponent {
        }
      }
    }
  }
  

  namespace no.ntnu.idi.apollo69 {
    namespace game_engine {
      namespace entities {
        class no.ntnu.idi.apollo69.game_engine.entities.SpaceshipFactory {
        }
      }
    }
  }
  

  namespace no.ntnu.idi.apollo69 {
    namespace game_engine {
      namespace entity_systems {
        class no.ntnu.idi.apollo69.game_engine.entity_systems.BoundsSystem {
        }
      }
    }
  }
  

  namespace no.ntnu.idi.apollo69 {
    namespace game_engine {
      namespace entity_systems {
        interface no.ntnu.idi.apollo69.game_engine.entity_systems.InputHandlerInterface {
        }
      }
    }
  }
  

  namespace no.ntnu.idi.apollo69 {
    namespace game_engine {
      namespace entity_systems {
        class no.ntnu.idi.apollo69.game_engine.entity_systems.MovementSystem {
        }
      }
    }
  }
  

  namespace no.ntnu.idi.apollo69 {
    namespace game_engine {
      namespace entity_systems {
        class no.ntnu.idi.apollo69.game_engine.entity_systems.PlayerControlSystem {
        }
      }
    }
  }
  

  namespace no.ntnu.idi.apollo69 {
    namespace game_engine {
      namespace entity_systems {
        class no.ntnu.idi.apollo69.game_engine.entity_systems.SendPositionSystem {
        }
      }
    }
  }
  

  namespace no.ntnu.idi.apollo69 {
    namespace game_engine {
      namespace entity_systems {
        class no.ntnu.idi.apollo69.game_engine.entity_systems.UpdateGameStateSystem {
        }
      }
    }
  }
  

  namespace no.ntnu.idi.apollo69 {
    namespace model {
      class no.ntnu.idi.apollo69.model.GameModel {
      }
    }
  }
  

  namespace no.ntnu.idi.apollo69 {
    namespace model {
      class no.ntnu.idi.apollo69.model.LobbyModel {
      }
    }
  }
  

  namespace no.ntnu.idi.apollo69 {
    namespace model {
      class no.ntnu.idi.apollo69.model.MainMenuModel {
      }
    }
  }
  

  namespace no.ntnu.idi.apollo69 {
    namespace model {
      class no.ntnu.idi.apollo69.model.MatchmakingModel {
      }
    }
  }
  

  namespace no.ntnu.idi.apollo69 {
    namespace model {
      class no.ntnu.idi.apollo69.model.ServerUpdateListener {
      }
    }
  }
  

  namespace no.ntnu.idi.apollo69 {
    namespace navigation {
      class no.ntnu.idi.apollo69.navigation.Navigator {
      }
    }
  }
  

  namespace no.ntnu.idi.apollo69 {
    namespace navigation {
      enum ScreenType {
      }
    }
  }
  

  namespace no.ntnu.idi.apollo69 {
    namespace network {
      class no.ntnu.idi.apollo69.network.GameClient {
      }
    }
  }
  

  namespace no.ntnu.idi.apollo69 {
    namespace network {
      class no.ntnu.idi.apollo69.network.NetworkClientSingleton {
      }
    }
  }
  

  namespace no.ntnu.idi.apollo69 {
    namespace view {
      class no.ntnu.idi.apollo69.view.GameView {
      }
    }
  }
  

  namespace no.ntnu.idi.apollo69 {
    namespace view {
      class no.ntnu.idi.apollo69.view.LobbyView {
      }
    }
  }
  

  namespace no.ntnu.idi.apollo69 {
    namespace view {
      class no.ntnu.idi.apollo69.view.MainMenuView {
      }
    }
  }
  

  namespace no.ntnu.idi.apollo69 {
    namespace view {
      class no.ntnu.idi.apollo69.view.MatchmakingView {
      }
    }
  }
  

  no.ntnu.idi.apollo69.Apollo69 -up-|> com.badlogic.gdx.ApplicationAdapter
  no.ntnu.idi.apollo69.Apollo69 o-- no.ntnu.idi.apollo69.navigation.Navigator : navigator
  no.ntnu.idi.apollo69.controller.GameController o-- no.ntnu.idi.apollo69.model.GameModel : model
  no.ntnu.idi.apollo69.controller.LobbyController o-- no.ntnu.idi.apollo69.network.GameClient : gameClient
  no.ntnu.idi.apollo69.controller.LobbyController o-- no.ntnu.idi.apollo69.model.LobbyModel : lobbyModel
  no.ntnu.idi.apollo69.controller.LobbyController o-- no.ntnu.idi.apollo69.navigation.Navigator : navigator
  no.ntnu.idi.apollo69.controller.MainMenuController o-- no.ntnu.idi.apollo69.navigation.Navigator : navigator
  no.ntnu.idi.apollo69.controller.MatchmakingController o-- no.ntnu.idi.apollo69.network.GameClient : gameClient
  no.ntnu.idi.apollo69.controller.MatchmakingController o-- no.ntnu.idi.apollo69.model.MatchmakingModel : model
  no.ntnu.idi.apollo69.controller.MatchmakingController o-- no.ntnu.idi.apollo69.navigation.Navigator : navigator
  no.ntnu.idi.apollo69.game_engine.GameEngine .up.|> com.badlogic.gdx.utils.Disposable
  no.ntnu.idi.apollo69.game_engine.components.BoosterComponent .up.|> com.badlogic.ashley.core.Component
  no.ntnu.idi.apollo69.game_engine.components.BoundingCircleComponent .up.|> com.badlogic.ashley.core.Component
  no.ntnu.idi.apollo69.game_engine.components.PlayableComponent .up.|> com.badlogic.ashley.core.Component
  no.ntnu.idi.apollo69.game_engine.components.PositionComponent .up.|> com.badlogic.ashley.core.Component
  no.ntnu.idi.apollo69.game_engine.components.RotationComponent .up.|> com.badlogic.ashley.core.Component
  no.ntnu.idi.apollo69.game_engine.components.VelocityComponent .up.|> com.badlogic.ashley.core.Component
  no.ntnu.idi.apollo69.game_engine.entity_systems.BoundsSystem -up-|> com.badlogic.ashley.core.EntitySystem
  no.ntnu.idi.apollo69.game_engine.entity_systems.BoundsSystem o-- no.ntnu.idi.apollo69.network.GameClient : gameClient
  no.ntnu.idi.apollo69.game_engine.entity_systems.MovementSystem -up-|> com.badlogic.ashley.core.EntitySystem
  no.ntnu.idi.apollo69.game_engine.entity_systems.PlayerControlSystem .up.|> no.ntnu.idi.apollo69.game_engine.entity_systems.InputHandlerInterface
  no.ntnu.idi.apollo69.game_engine.entity_systems.PlayerControlSystem -up-|> com.badlogic.ashley.core.EntitySystem
  no.ntnu.idi.apollo69.game_engine.entity_systems.PlayerControlSystem o-- no.ntnu.idi.apollo69.network.GameClient : gameClient
  no.ntnu.idi.apollo69.game_engine.entity_systems.SendPositionSystem -up-|> com.badlogic.ashley.core.EntitySystem
  no.ntnu.idi.apollo69.game_engine.entity_systems.SendPositionSystem o-- no.ntnu.idi.apollo69.network.GameClient : gameClient
  no.ntnu.idi.apollo69.game_engine.entity_systems.UpdateGameStateSystem -up-|> com.badlogic.ashley.core.EntitySystem
  no.ntnu.idi.apollo69.game_engine.entity_systems.UpdateGameStateSystem o-- no.ntnu.idi.apollo69.network.GameClient : gameClient
  no.ntnu.idi.apollo69.model.GameModel o-- no.ntnu.idi.apollo69.game_engine.Background : background
  no.ntnu.idi.apollo69.model.GameModel o-- no.ntnu.idi.apollo69.network.GameClient : gameClient
  no.ntnu.idi.apollo69.model.GameModel o-- no.ntnu.idi.apollo69.game_engine.GameEngine : gameEngine
  no.ntnu.idi.apollo69.model.GameModel o-- no.ntnu.idi.apollo69.navigation.Navigator : navigator
  no.ntnu.idi.apollo69.model.MatchmakingModel .up.|> com.badlogic.gdx.utils.Disposable
  no.ntnu.idi.apollo69.model.ServerUpdateListener -up-|> com.esotericsoftware.kryonet.Listener
  no.ntnu.idi.apollo69.model.ServerUpdateListener o-- no.ntnu.idi.apollo69.game_engine.GameEngine : gameEngine
  no.ntnu.idi.apollo69.model.ServerUpdateListener o-- no.ntnu.idi.apollo69.navigation.Navigator : navigator
  no.ntnu.idi.apollo69.navigation.Navigator .up.|> com.badlogic.gdx.utils.Disposable
  no.ntnu.idi.apollo69.network.GameClient o-- no.ntnu.idi.apollo69framework.network_messages.UpdateMessage : gameState
  no.ntnu.idi.apollo69.network.NetworkClientSingleton o-- no.ntnu.idi.apollo69.network.GameClient : gameClient
  no.ntnu.idi.apollo69.view.GameView .up.|> com.badlogic.gdx.Screen
  no.ntnu.idi.apollo69.view.GameView -up-|> com.badlogic.gdx.ApplicationAdapter
  no.ntnu.idi.apollo69.view.GameView o-- no.ntnu.idi.apollo69.controller.GameController : controller
  no.ntnu.idi.apollo69.view.GameView o-- no.ntnu.idi.apollo69.model.GameModel : model
  no.ntnu.idi.apollo69.view.LobbyView .up.|> com.badlogic.gdx.Screen
  no.ntnu.idi.apollo69.view.LobbyView .up.|> no.ntnu.idi.apollo69.Variables
  no.ntnu.idi.apollo69.view.LobbyView -up-|> com.badlogic.gdx.ApplicationAdapter
  no.ntnu.idi.apollo69.view.LobbyView o-- no.ntnu.idi.apollo69.controller.LobbyController : lobbyController
  no.ntnu.idi.apollo69.view.LobbyView o-- no.ntnu.idi.apollo69.model.LobbyModel : lobbyModel
  no.ntnu.idi.apollo69.view.MainMenuView .up.|> com.badlogic.gdx.Screen
  no.ntnu.idi.apollo69.view.MainMenuView .up.|> no.ntnu.idi.apollo69.Variables
  no.ntnu.idi.apollo69.view.MainMenuView -up-|> com.badlogic.gdx.ApplicationAdapter
  no.ntnu.idi.apollo69.view.MainMenuView o-- no.ntnu.idi.apollo69.controller.MainMenuController : mainMenuController
  no.ntnu.idi.apollo69.view.MainMenuView o-- no.ntnu.idi.apollo69.model.MainMenuModel : mainMenuModel
  no.ntnu.idi.apollo69.view.MatchmakingView .up.|> com.badlogic.gdx.Screen
  no.ntnu.idi.apollo69.view.MatchmakingView o-- no.ntnu.idi.apollo69.controller.MatchmakingController : controller
  no.ntnu.idi.apollo69.view.MatchmakingView o-- no.ntnu.idi.apollo69.model.MatchmakingModel : model


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
